--- a/style/style.css
+++ b/style/style.css
@@ -26,3 +26,20 @@ table {
 .Btn {
   margin: 0 50px;
 }
+/* h3 */
+.moving {
+  padding: 0 50px;
+}
+/* random button */
+.rabdomBtnColor {
+  font-size: 17px;
+  width: 70px;
+  height: 30px;
+  color: aliceblue;
+  background-color: #6157cf;
+  border: 2px solid #6157cf;
+  border-radius: 4px;
+}
+.rabdomBtnColor:hover {
+  background-color: #8177f3;
+}
